# KairoRM

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
agents/: __init__.py  arch_agent.py  base.py  contributor_agent.py  dep_agent.py  module_agent.py  orchestrator.py
cli/: banner.py  main.py
docs/: demo.tape
indexing/: __init__.py  embeddings.py  retriever.py  vectorstore.py
ingestion/: __init__.py  detector.py  fetcher.py  filter.py  types.py
output/: __init__.py  exporter.py  qa.py  qa_server.py  renderer.py  report_template.html  theme.py  tui.py  web_page.py
parsing/: __init__.py  ast_parser.py  chunker.py  ranker.py
synthesis/: __init__.py  compressor.py  synthesizer.py
tests/agents/: test_agents.py  test_base.py  test_orchestrator.py
tests/cli/: test_main.py
tests/indexing/: test_embeddings.py  test_retriever.py  test_vectorstore.py
tests/ingestion/: test_detector.py  test_fetcher.py  test_filter.py
tests/output/: test_exporter.py  test_qa_server.py  test_renderer.py  test_tui.py
tests/parsing/: test_ast_parser.py  test_chunker.py  test_ranker.py
tests/synthesis/: test_compressor.py  test_synthesizer.py
